# bubble

./: Cargo.toml  README.md  README_zh-CN.md
bubble-auth/: Cargo.toml  README.md  README_zh-CN.md
bubble-db/: Cargo.toml  README.md  README_zh-CN.md
bubble-db/src/: config.rs  lib.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs  types.rs
bubble-macro/: Cargo.toml  README.md  README_zh-CN.md
bubble-macro/src/: init.rs  lib.rs  types.rs
bubble-mq/: Cargo.toml  README.md  README_zh-CN.md
bubble-web/: Cargo.toml  README.md  README_zh-CN.md
src/: types.rs
tests/: db.rs  mvc.rs  orm.rs
