[package]
name = "bubble"
version = "0.1.1"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Enterprise-level development framework."
keywords = ["bubble", "macro"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/bubble"

[dependencies]
bubble-db = "0.1.0"
bubble-macro = "0.1.5"

# [dependencies]
# bubble-db = { path = "./bubble-db" }
# bubble-macro = { path = "./bubble-macro" }
