[package]
name = "bubble-auth"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "The unified authentication module of the bubble framework."
keywords = ["bubble", "auth"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/bubble/tree/main/bubble-auth"

[dependencies]
