[package]
name = "bubble-db"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Bubble Framework is a database abstraction layer."
keywords = ["bubble", "database"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/bubble/tree/main/bubble-db"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full", "tracing"] }
tracing = "0.1"
config = "0.13"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
futures = "0.3"
base64 = "0.21"
deadpool = "0.10"
bb8 = "0.8"
mysql = "24.0"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
bb8-postgres = "0.8"
postgres = "0.19"
rusqlite = { version = "0.29", features = ["bundled", "functions"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.12"
mysql_async = "0.36.1"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tempfile = "3.8"
serde_json = "1.0"
