[package]
name = "bubble-macro"
version = "0.1.1"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Includes all macros of the bubble framework"
keywords = ["bubble", "macro"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/bubble/tree/main/bubble-macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
