[package]
name = "bubble-mq"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "The bubble framework unified message queue abstraction layer."
keywords = ["bubble", "mq"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/bubble/tree/main/bubble-mq"

[dependencies]
