[package]
name = "bubble-web"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "The specific implementation of all web-related logic within the bubble framework."
keywords = ["bubble", "web"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/bubble/tree/main/bubble-web"

[dependencies]
